# boltz

./: .drone.yml  .gitignore  Dockerfile  README.md  boltz.def  environment.yml  polymer.ipynb  pyproject.toml  pytest.ini
.codeboarding/: Application Orchestration.md  Boltz Core Models.md  Data Management & Augmentation.md  Data Processing & Feature Engineering.md  General Utilities.md  Neural Network Architecture.md  Training & Evaluation Framework.md  on_boarding.md
.github/workflows/: CICD.yml  ci.yml
docker/: Dockerfile
docker-project/: .dockerignore  README.md
docker-project/src/app/: main.py
docs/: prediction.md
examples/: ccr1.fasta
examples/generated_ligands/: ligand_0.yaml  ligand_1.yaml  ligand_10.yaml  ligand_100.yaml  ligand_1000.yaml  ligand_1001.yaml  ligand_1002.yaml  ligand_1003.yaml  ligand_1004.yaml  ligand_1005.yaml  ligand_1006.yaml  ligand_1007.yaml  ligand_1008.yaml  ligand_1009.yaml  ligand_101.yaml  ligand_1010.yaml  ligand_1011.yaml  ligand_1012.yaml  ligand_1013.yaml  ligand_1014.yaml  ligand_1015.yaml  ligand_1016.yaml  ligand_1017.yaml  ligand_1018.yaml  ligand_1019.yaml  ligand_102.yaml  ligand_1020.yaml  ligand_1021.yaml  ligand_1022.yaml  ligand_1023.yaml  ligand_1024.yaml  ligand_1025.yaml  ligand_1026.yaml  ligand_1027.yaml  ligand_1028.yaml  ligand_1029.yaml  ligand_103.yaml  ligand_1030.yaml  ligand_1031.yaml  ligand_1032.yaml  (+7933 more)
sandbox/: boltz_example.sh  monitoring_script.py
scripts/eval/: run_evals.py
scripts/misc/: generate_ligand_yamls.py
scripts/process/: mmcif.py  rcsb.py
scripts/train/: train.py  trainv2.py
scripts/train/configs/: polymer_properties.yaml
src/boltz/: main.py
src/boltz/data/: mol.py  types.py
src/boltz/data/feature/: featurizer.py  featurizerv2.py
src/boltz/data/filter/static/: polymer.py
src/boltz/data/module/: inference.py  inferencev2.py  polymer_csv.py  polymer_trainingv2.py  training.py  training_polymer.py  trainingv2.py
src/boltz/data/msa/: mmseqs2.py
src/boltz/data/parse/: fasta.py  schema.py
src/boltz/data/write/: mmcif.py  pdb.py  rosetta_relax.py  sdf.py  writer.py
src/boltz/model/: model.py
src/boltz/model/layers/: attention.py  attentionv2.py  confidence_utils.py  pair_averaging.py  pairformer.py  transition.py  triangular_mult.py
src/boltz/model/layers/triangular_attention/: primitives.py
src/boltz/model/loss/: bfactor.py  confidencev2.py  diffusion.py  diffusionv2.py  distogramv2.py
src/boltz/model/models/: boltz1.py  boltz2.py
src/boltz/model/modules/: affinity.py  confidence.py  confidencev2.py  diffusion.py  diffusionv2.py  encodersv2.py  trunk.py  trunkv2.py
src/boltz/model/potentials/: potentials.py
tests/: test_kernels.py  test_regression.py  test_standardization.py
tests/model/layers/: test_polymer_properties_head.py  test_triangle_attention.py
